--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,11 @@ description = ""
 authors = ["Jurriaan Den Toonder <1493561+Fastjur@users.noreply.github.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
-numpy = "^1.23.3"
-torch = "^1.12.1"
+python = "3.7.x"
+torch = "1.4.0"
+transformers = "^3"
 fuzzywuzzy = "^0.18.0"
-transformers = "^4.22.1"
+protobuf = "3.20.x"
 
 [tool.poetry.dev-dependencies]
 
