--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ torch = "1.4.0"
 transformers = "^3"
 fuzzywuzzy = "^0.18.0"
 protobuf = "3.20.x"
+jupyter = "^1.0.0"
 
 [tool.poetry.dev-dependencies]
 
